# CrowdShield

./: .gitignore  generate_caches.py  run_extraction.py  start-demo.sh  start-local.sh
Data/Galway/: Galway.rtf
Data/Telcofy/: Data context.rtf  Ullevaal_Stadion_areas.csv  Ullevaal_Stadion_breakdown.csv  Ullevaal_Stadion_summary.csv
Data/Telia/: ATT00001.htm
app/: package-lock.json  package.json
backend/: pyproject.toml
backend/data/: doc_cache.json  fredrikstad_geocache.json
backend/data/sim_cache/: routes_06f9e1fc10dda7a818e08be8d6531210.json  routes_b06871bb6577b72322680769220145f9.json  routes_c0059862c1d67f47c75c3b2b29208aab.json  routes_dbcb61b5d0d9f9294e698eb805e66a4c.json
backend/data/zones/: galway_custom.json  ullevaal_custom.json
backend/src/: __init__.py
backend/src/ai/: __init__.py  entity_resolver.py  gap_analyzer.py  pdf_extractor.py  risk_extractor.py  stakeholder_identifier.py
backend/src/analytics/: __init__.py  anomaly_detection.py  baseline.py  benchmarking.py  composite_risk.py  event_fingerprint.py
backend/src/api/: __init__.py  main.py
backend/src/api/routes/: __init__.py  analytics.py  documents.py  health.py  risk.py  simulation.py  spatial.py  stakeholders.py  venues.py
backend/src/etl/: __init__.py  data_store.py  geocoder.py  telcofy_loader.py  telia_loader.py
backend/src/ontology/: __init__.py  controlled_vocab.py  schema.py
backend/src/simulation/: __init__.py
db/: docker-compose.yml  init-db.sh
db/migrations/: 001_extensions.sql  002_enums.sql  003_m1_event_venue.sql  004_m2_hazard_risk.sql  (+7 more)
(+147 files in other folders)
