[project]
name = "crowdshield-backend"
version = "0.1.0"
description = "CrowdShield Event Risk Intelligence Platform - Backend API"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.9.0",
    "pandas>=2.2.0",
    "shapely>=2.0.0",
    "numpy>=1.26.0",
    "pdfplumber>=0.11.0",
    "httpx>=0.27.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
db = [
    "sqlalchemy[asyncio]>=2.0.0",
    "geoalchemy2>=0.15.0",
    "asyncpg>=0.29.0",
]
ai = [
    "google-generativeai>=0.8.0",
]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.6.0",
]

[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
target-version = "py312"
line-length = 100
